# tiny-no-brain-study-backend

./: .gitignore  README.md  pyproject.toml
config/: settings.py
schedule/: admin.py  models.py
schedule/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
